--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>My awesome web page</title>
-    </title>
   </head>
   <body>
+    <h1>HELLO</h1>
     Hello there, awesome person!
     </body>
   </html>
