--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My awesome web page</title>
   </head>
   <body>
+    <img src="https://avatars2.githubusercontent.com/u/71095964?v=4">
     <h1>HELLO</h1>
     Hello there, awesome person!
     </body>
