--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <img src="https://avatars2.githubusercontent.com/u/71095964?v=4">
     <h1>HELLO</h1>
     Hello there, awesome person!
+    <ul>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Unordered list</li>
+
+</ul>
     </body>
   </html>
