--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <li>Unordered list</li>
 
 </ul>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </body>
   </html>
